src/test/resources/Parser/SyntaxErrors/AccessForbidden.front
class A:
    private static i: int32;

class B:
    test() {
        A.i;
    }